TakeoutOrderServiceTest 추가 리팩터링